src/objects/Submittals__c.object
<CustomObject>
    <fields>
        <fullName>BWC_Review_Responses_Due__c</fullName>
        <label>BWC Review Responses Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPC_Response_Requested_By__c</fullName>
        <label>EPC Response Requested By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineer_Review__c</fullName>
        <label>Engineer Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Review Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-Up Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Review Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provided_By__c</fullName>
        <label>Provided By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provided_On__c</fullName>
        <label>Provided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submittal_No__c</fullName>
        <label>Submittal No.</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Submittal</label>
    <nameField>
        <label>Submittal Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submittals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>